--- a/node-demo3/views/login.ejs
+++ b/node-demo3/views/login.ejs
@@ -18,10 +18,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
-                <form class="form-horizontal" action="/product" method="POST">
+                <form class="form-horizontal" action="/doLogin" method="POST">
                     <span class="heading">用户登录</span>
                     <div class="form-group">
-                        <input type="text" name="username" class="form-control" id="inputEmail3" placeholder="用户名">
+                        <input autofocus type="text" name="username" class="form-control" id="inputEmail3" placeholder="用户名">
                         <i class="fa fa-user"></i>
                     </div>
                     <div class="form-group help">
