--- a/node-demo3/views/product.ejs
+++ b/node-demo3/views/product.ejs
@@ -51,7 +51,7 @@
                             <td>
                                 <%=i+1%>
                             </td>
-                            <td>图标</td>
+                            <td><img width="100" src="<%=list[i].path%>" alt=""></td>
                             <td>
                                 <%=list[i].title%>
                             </td>
