--- a/node-demo3/views/productAdd.ejs
+++ b/node-demo3/views/productAdd.ejs
@@ -20,7 +20,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive input-form">
-                        <form action="/doAdd" method="post">
+                        <form action="/doAdd" method="post" enctype="multipart/form-data">
                             <ul>
                                 <li> 商品名称: <input type="text" name="title" /></li>
 
