--- a/node-demo3/views/public/leftNav.ejs
+++ b/node-demo3/views/public/leftNav.ejs
@@ -3,7 +3,7 @@
 
     <a href="/" class="list-group-item">
         商品列表</a>
-    <a href="/add" class="list-group-item">
+    <a href="/productAdd" class="list-group-item">
         增加商品</a>
 
     <a href="#" class="list-group-item active">分类管理</a>
